--- a/config/database.ci.yml
+++ b/config/database.ci.yml
@@ -17,21 +17,22 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  host: db
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  host: localhost
   username: postgres
   password: postgres
+
 development:
   <<: *default
-  database: development
+  database: rails_starter_project_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user that initialized the database.
-  #username: FMC
+  #username: rails_starter_project
 
   # The password associated with the postgres role (username).
   #password:
@@ -59,7 +60,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: test
+  database: rails_starter_project_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -82,6 +83,6 @@ test:
 #
 production:
   <<: *default
-  database: demo_production
-  username: postgres
-  password: postgres
+  database: rails_starter_project_production
+  username: rails_starter_project
+  password: <%= ENV['RAILS_STARTER_PROJECT_DATABASE_PASSWORD'] %>
