--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -17,3 +17,9 @@ Metrics/MethodLength:
 Metrics/BlockLength:
   Exclude:
     - 'spec/**/*_spec.rb'
+
+
+Layout/LineLength: 
+  Exclude:
+    - 'config/initializers/devise.rb'
+    - 'db/seeds.rb'
